--- a/CSS/index.css
+++ b/CSS/index.css
@@ -72,7 +72,7 @@
         font-family:'Roboto',sans-serif;
         font-weight:300;
         color:#FFFFFF;
-        background-color:#3399FF;
+        background-color:#000000;
         text-align:center;
         display: none;
         cursor: pointer;
